Page acceuil / CSS/ Icone
Presque fini page accueil et son CSS, rajout d'une icone pour le site
dans la barre de titre.

--- a/Page acceuil.html
+++ b/Page acceuil.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		
+		<link href='images/skate.ico' rel='shortcut icon'/>
 		<title>OnlineSk4teSh0p - Acceuil</title>
 	</head>
 
 	
 	<body>
-		<h1> Bienvenue sur OnlineSk4teSh0p ! </h1>
+		<h1 id="tacc"> Bienvenue sur OnlineSk4teSh0p ! </h1>
 		
-			<p> Le site n°1 de vente de board et équipements dédiés au Skate </p>
-			<a href="#Sommaire"> Se diriger vers le sommaire </a>
+			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
+			<a id="lacc" href="Sommaire.html"> Se diriger vers le sommaire</a>
 	</body>
 </html>
 	
