Positionnement bouton pour acces aux differentes pages

--- a/Page acceuil.html
+++ b/Page acceuil.html
@@ -12,7 +12,10 @@
 		<h1 id="tacc"> Bienvenue sur OnlineSk4teSh0p ! </h1>
 		
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
-			<a id="lacc" href="Sommaire.html"> Se diriger vers le sommaire</a>
+			<img id="bouton1" src="images/som.png" width="150" height="150" alt="image" />
+			<img id="bouton2" src="images/som.png" width="150" height="150" alt="image" />
+			<img id="bouton3" src="images/som.png" width="150" height="150" alt="image" />
+			<img id="bouton4" src="images/som.png" width="150" height="150" alt="image" />
 	</body>
 </html>
 	
