Ajout menu déroulant horizontal

--- a/acceuil.html
+++ b/acceuil.html
@@ -9,6 +9,15 @@
 
 	
 	<body>
+	
+		<ul>
+			<li><a href="#1">Home</a></li>
+			<li><a href="#2">Portfolio</a></li>
+			<li><a href="#3">News</a></li>
+			<li><a href="#4">Labs</a></li>
+			<li><a href="#5">Contact</a></li>
+		</ul>
+
 		<h1 id="tacc"> Bienvenue sur OnlineSk4teSh0p </h1>
 		
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
@@ -16,5 +25,6 @@
 			<a href="skate.html"> <img id="bouton2" src="images/ska.png" /> </a>
 			<a href="vet.html"> <img id="bouton3" src="images/vete.png" /> </a>
 			<a href="aprop.html"> <img id="bouton4" src="images/aprop.png" /> </a>
+			
 	</body>
 </html>
