Refonte menu+ début contenu

--- a/acceuil.html
+++ b/acceuil.html
@@ -11,7 +11,8 @@
 	<body>
 	
 		<ul>
-			<li><a href="#1">Home</a></li>
+			<li><a href="acceuil.html">Acceuil</a></li>
+			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="#3">News</a></li>
 			<li><a href="#4">Labs</a></li>
