--- a/aprop.html
+++ b/aprop.html
@@ -9,6 +9,14 @@
 
 	
 	<body>
+		<ul>
+			<li><a href="acceuil.html">Acceuil</a></li>
+			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
+			<li><a href="#2">Portfolio</a></li>
+			<li><a href="#3">News</a></li>
+			<li><a href="#4">Labs</a></li>
+			<li><a href="#5">Contact</a></li>
+		</ul>
 		<h1 id="tapr"> A propos du site </h1>
 			<a href="acceuil.html"> <img id="bouton1" src="images/acce.png" /> </a>
 			<a href="skate.html"> <img id="bouton2" src="images/ska.png" /> </a>
