Page a propos quasi fini

--- a/promo.html
+++ b/promo.html
@@ -14,7 +14,8 @@
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="#3">News</a></li>
-			<li><a href="#4">A propos de nous</a></li>
+			<li><a href="#4">Labs</a></li>
+			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 		<p id="pr1"> <img id="test" src="images/test.png"> </img> </p>
 	</body>
