--- a/vet.html
+++ b/vet.html
@@ -15,7 +15,7 @@
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="#3">News</a></li>
 			<li><a href="#4">Labs</a></li>
-			<li><a href="#5">Contact</a></li>
+			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 		<h1 id="tapr"> Les vêtements parfait pour vos sessions </h1>
 			<a href="acceuil.html"> <img id="bouton1" src="images/acce.png" /> </a>
