--- a/acceuil.html
+++ b/acceuil.html
@@ -16,7 +16,7 @@
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="#3">News</a></li>
 			<li><a href="#4">Labs</a></li>
-			<li><a href="#5">Contact</a></li>
+			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 
 		<h1 id="tacc"> Bienvenue sur OnlineSk4teSh0p </h1>
