--- a/aprop.html
+++ b/aprop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8"/>
@@ -15,9 +15,28 @@
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="#3">News</a></li>
 			<li><a href="#4">Labs</a></li>
-			<li><a href="#5">Contact</a></li>
+			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		<h1 id="tapr"> A propos du site </h1>
+		<h1 id="tapr"> A propos de nous </h1>
+			<section id="papr">
+			<p> Nous sommes une équipe de jeunes passionnés de Skate depuis l'enfance, c'est pourquoi nous avons décidé il y a peu de lancer notre site. </p>
+			<p>Nous souhaitons proposer à nos clients les articles les plus récents et performants pour que vos sessions se déroulent le mieux possible.</p>
+			<p>Si vous souhaitez nous contacter pour des raisons commerciales, des questions concernant nos services, ou des partenariat, vous pouvez le faire par Facebook, Twitter, mail ou en nous contactant par téléphone</p>
+			<TABLE>
+			<TR>
+				<TD><img id="cont" src="images/fb.png"/></TD>
+				<TD><img id="cont" src="images/twitter.png"/></TD>
+				<TD><img id="cont" src="images/mail.png"/></TD>
+				<TD><img id="cont" src="images/tel.png"/></TD>
+			</TR>
+			<tr>
+				<td> Facebook </td>
+				<td> Twitter </td>
+				<td> Mail </td>
+				<td> Téléphone </td>
+			</tr>
+			</TABLE>
+			</section>
 			<a href="acceuil.html"> <img id="bouton1" src="images/acce.png" /> </a>
 			<a href="skate.html"> <img id="bouton2" src="images/ska.png" /> </a>
 			<a href="vet.html"> <img id="bouton3" src="images/vete.png" /> </a>
