Mise en place boutons liens dans a propos, suppression des anciens boutons de navigation(remplacer par menu en haut)

--- a/aprop.html
+++ b/aprop.html
@@ -24,22 +24,18 @@
 			<p>Si vous souhaitez nous contacter pour des raisons commerciales, des questions concernant nos services, ou des partenariat, vous pouvez le faire par Facebook, Twitter, mail ou en nous contactant par téléphone</p>
 			<TABLE>
 			<TR>
-				<TD><img id="cont" src="images/fb.png"/></TD>
-				<TD><img id="cont" src="images/twitter.png"/></TD>
-				<TD><img id="cont" src="images/mail.png"/></TD>
-				<TD><img id="cont" src="images/tel.png"/></TD>
+				<TD id="fb"><a href="http://facebook.com"> <img id="cont" src="images/fb.png"/> </a> </TD>
+				<TD id="tw"><a href="http://twitter.com"> <img id="cont" src="images/twitter.png"/> </a> </TD>
+				<TD id="mail"><a href="http://gmail.com"> <img id="cont" src="images/mail.png"/> </a> </TD>
+				<TD id="tel"><img id="cont" src="images/tel.png"/></TD>
 			</TR>
 			<tr>
 				<td> Facebook </td>
 				<td> Twitter </td>
 				<td> Mail </td>
-				<td> Téléphone </td>
+				<td> 04 14 15 16 17 </td>
 			</tr>
 			</TABLE>
 			</section>
-			<a href="acceuil.html"> <img id="bouton1" src="images/acce.png" /> </a>
-			<a href="skate.html"> <img id="bouton2" src="images/ska.png" /> </a>
-			<a href="vet.html"> <img id="bouton3" src="images/vete.png" /> </a>
-			<a href="aprop.html"> <img id="bouton4" src="images/aprop.png" /> </a>
 	</body>
 </html>
