Supression elements inutiles css/html

--- a/aprop.html
+++ b/aprop.html
@@ -24,10 +24,10 @@
 			<p>Si vous souhaitez nous contacter pour des raisons commerciales, des questions concernant nos services, ou des partenariat, vous pouvez le faire par Facebook, Twitter, mail ou en nous contactant par téléphone</p>
 			<TABLE>
 			<TR>
-				<TD id="fb"><a href="http://facebook.com"> <img id="cont" src="images/fb.png"/> </a> </TD>
-				<TD id="tw"><a href="http://twitter.com"> <img id="cont" src="images/twitter.png"/> </a> </TD>
-				<TD id="mail"><a href="http://gmail.com"> <img id="cont" src="images/mail.png"/> </a> </TD>
-				<TD id="tel"><img id="cont" src="images/tel.png"/></TD>
+				<TD ><a href="http://facebook.com"> <img id="cont" src="images/fb.png"/> </a> </TD>
+				<TD ><a href="http://twitter.com"> <img id="cont" src="images/twitter.png"/> </a> </TD>
+				<TD ><a href="http://gmail.com"> <img id="cont" src="images/mail.png"/> </a> </TD>
+				<TD ><img src="images/tel.png" id="cont"/></TD>
 			</TR>
 			<tr>
 				<td> Facebook </td>
