Fin page A propos, quasi fin du panier
+ correction d'éléments superflu dans le CSS et le html.

--- a/aprop.html
+++ b/aprop.html
@@ -13,29 +13,28 @@
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
-			<li><a href="#3">News</a></li>
-			<li><a href="#4">Labs</a></li>
+			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 		<h1 id="tapr"> A propos de nous </h1>
-			<section id="papr">
+			<section id="tab">
 			<p> Nous sommes une équipe de jeunes passionnés de Skate depuis l'enfance, c'est pourquoi nous avons décidé il y a peu de lancer notre site. </p>
 			<p>Nous souhaitons proposer à nos clients les articles les plus récents et performants pour que vos sessions se déroulent le mieux possible.</p>
 			<p>Si vous souhaitez nous contacter pour des raisons commerciales, des questions concernant nos services, ou des partenariat, vous pouvez le faire par Facebook, Twitter, mail ou en nous contactant par téléphone</p>
-			<TABLE>
-			<TR>
-				<TD ><a href="http://facebook.com"> <img id="cont" src="images/fb.png"/> </a> </TD>
-				<TD ><a href="http://twitter.com"> <img id="cont" src="images/twitter.png"/> </a> </TD>
-				<TD ><a href="http://gmail.com"> <img id="cont" src="images/mail.png"/> </a> </TD>
-				<TD ><img src="images/tel.png" id="cont"/></TD>
-			</TR>
+			<table>
+			<tr>
+				<TD ><a href="http://facebook.com"> <img class="cont" src="images/fb.png"/> </a> </TD>
+				<TD ><a href="http://twitter.com"> <img class="cont"  src="images/twitter.png"/> </a> </TD>
+				<TD ><a href="http://gmail.com"> <img class="cont"    src="images/mail.png"/> </a> </TD>
+				<TD ><img src="images/tel.png" class="cont"/></TD>
+			</tr>
 			<tr>
 				<td> Facebook </td>
 				<td> Twitter </td>
 				<td> Mail </td>
 				<td> 04 14 15 16 17 </td>
 			</tr>
-			</TABLE>
+			</table>
 			</section>
 	</body>
 </html>
