--- a/vet.html
+++ b/vet.html
@@ -13,11 +13,10 @@
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
-			<li><a href="#3">News</a></li>
-			<li><a href="#4">Labs</a></li>
+			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		<h1 id="tapr"> Les vêtements parfait pour vos sessions </h1>
+		<h1> Les vêtements parfait pour vos sessions </h1>
 
 	</body>
 </html>
