--- a/acceuil.html
+++ b/acceuil.html
@@ -14,14 +14,14 @@
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
-			<li><a href="#3">News</a></li>
-			<li><a href="#4">Labs</a></li>
+			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 
-		<h1 id="tacc"> Bienvenue sur OnlineSk4teSh0p </h1>
+		<h1> Bienvenue sur OnlineSk4teSh0p </h1>
 		
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
+			<!-- Page d'actu sur vêtement, collection, etc </p> -->
 			
 	</body>
 </html>
