--- a/promo.html
+++ b/promo.html
@@ -13,11 +13,57 @@
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
-			<li><a href="#3">News</a></li>
-			<li><a href="#4">Labs</a></li>
+			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		<p id="pr1"> <img id="test" src="images/test.png"> </img> </p>
+		
+		<h1> Promotions du moment </h1>
+		
+		<section id="tab">
+		<p> Nos articles les plus commandés en promo dès maintenant, jusqu'à fin janvier ! </p>
+		<table>
+		<tr>
+			<td> <img class="cont" id="pcont" src="images/board.png"/> </td>
+			<td> <img class="cont" id="pcont" src="images/trash.png"/> </td>
+			<td> <img class="cont" id="pcont" src="images/roue.png"/> </td>
+		</tr>
+		<tr>
+			<td> Board Gloab Brand -40% </td>
+			<td> Sweat Trasher -20% </td>
+			<td> 4 paires roues Element -50% </td>
+		</tr>
+		<tr>
+			<td id="ap"> 119,99 € </td>
+			<td id="ap"> 42 € </td>
+			<td id="ap"> 62,99 € </td>
+		</tr>
+		<tr>
+			<td id="np"> 71,99 € !</td>
+			<td id="np"> 33,60 € !</td>
+			<td id="np"> 31,45 € !</td>
+		</table>
+		<table>
+		<tr>
+			<td> <img class="cont" id="pcont" src="images/wax.png"/> </td>
+			<td> <img class="cont" id="pcont" src="images/truck.png"/> </td>
+			<td> <img class="cont" id="pcont" src="images/abec.png"/> </td>
+		</tr>
+		<tr>
+			<td> Wax Spitfire -30% </td>
+			<td> Trucks Venture -20% </td>
+			<td> Roulements Abec 5 Independent -40% </td>
+		</tr>
+		<tr>
+			<td id="ap"> 12,50 € </td>
+			<td id="ap"> 24,90 € </td>
+			<td id="ap"> 16 € </td>
+		</tr>
+		<tr>
+			<td id="np"> 8,75 € !</td>
+			<td id="np"> 19,92 € !</td>
+			<td id="np"> 9,60 € ! </td>
+		</tr>
+		</table>
 	</body>
 	
 </html>
