Finition page panier, quasi fin page compte, possible debut de fausse page changement avatar, bouton dans promo

--- a/promo.html
+++ b/promo.html
@@ -14,6 +14,7 @@
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="panier.html">Panier (3)</a></li>
+			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 		
@@ -41,6 +42,14 @@
 			<td id="np"> 71,99 € !</td>
 			<td id="np"> 33,60 € !</td>
 			<td id="np"> 31,45 € !</td>
+		</tr>
+		<tr>
+			<td> <button> Ajouter au panier </button> </td>
+			<td> <button> Ajouter au panier </button> </td>
+			<td> <button> Ajouter au panier </button> </td>
+
+		</tr>
+		
 		</table>
 		<table>
 		<tr>
@@ -62,6 +71,11 @@
 			<td id="np"> 8,75 € !</td>
 			<td id="np"> 19,92 € !</td>
 			<td id="np"> 9,60 € ! </td>
+		</tr>
+		<tr>
+			<td> <button> Ajouter au panier </button> </td>
+			<td> <button> Ajouter au panier </button> </td>
+			<td> <button> Ajouter au panier </button> </td>
 		</tr>
 		</table>
 	</body>
