--- a/panier.html
+++ b/panier.html
@@ -14,6 +14,7 @@
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
 			<li><a href="#2">Portfolio</a></li>
 			<li><a href="panier.html">Panier (3)</a></li>
+			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 		
