Fin de l'aspect commande, mise a jour de la partie personnelle

--- a/compte.html
+++ b/compte.html
@@ -29,7 +29,7 @@
 			<p> <span id="int"> Âge : </span> 18 ans </p>
 			<p> <span id="int"> Date de Naissance : </span> 28/10/1997 </p>
 			<p> <span id="int"> Sexe : </span> Homme </p>
-			<p> <a href="fonction.html"> <button>Changer votre avatar </button> </a> <button> Modifier vos données personnelles </button> </p>
+			<p> <button> Modifier vos données personnelles </button> </p>
 		</section>
 		
 			
