--- a/panier.html
+++ b/panier.html
@@ -21,7 +21,7 @@
 		<h1> Votre Panier </h1>
 		
 		<section id="tab">
-			<table>
+			<table id="lint">
 			<tr>
 				<td id="int"> Produit </td>
 				<td id="int"> Taille </td>
@@ -37,6 +37,7 @@
 				<td> 33,60 € </td>
 				<td> 33,60 € </td>
 			</tr>
+
 			<tr>
 				<td> Sweat Trasher Noir </td>
 			</tr>
@@ -51,11 +52,12 @@
 				<td> T-shirt Element Blanc crème </td>
 			</table>
 			
-			<table>
+			<table id="lint">	
 			<tr>
 				<td> <span>Montant total : </span>63,40 €</td>
 			</tr>
 			</table>
+			<p> <a href="commande.html"><button>Passer votre commande</button></a> </p>
 		</section>
 	</body>
 </html>
