Fin de l'aspect compte

--- a/panier.html
+++ b/panier.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='images/skate.ico' rel='shortcut icon'/>
-		<title>OnlineSk4teSh0p - Promotions de Noël </title>
+		<title>OnlineSk4teSh0p - Panier </title>
 	</head>
 	
 	<body>
