--- a/compte.html
+++ b/compte.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='images/skate.ico' rel='shortcut icon'/>
-		<title>OnlineSk4teSh0p - Acceuil</title>
+		<title>OnlineSk4teSh0p - Mon Compte</title>
 	</head>
 
 	
@@ -29,7 +29,8 @@
 			<p> <span id="int"> Âge : </span> 18 ans </p>
 			<p> <span id="int"> Date de Naissance : </span> 28/10/1997 </p>
 			<p> <span id="int"> Sexe : </span> Homme </p>
-			<p> <button> Modifier vos données personnelles </button> </p>
+			<p> <span id="int"> Email : </span> iut-2016@univ-lyon1.fr </p>
+			<p> <a href="donperso.html"><button> Modifier vos données personnelles </button></a>	 </p>
 		</section>
 		
 			
