Fin de l'acceuil + quasi fin des pages d'articles + correction d'élément non utile

--- a/promo.html
+++ b/promo.html
@@ -12,7 +12,6 @@
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
-			<li><a href="#2">Portfolio</a></li>
 			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
@@ -24,9 +23,9 @@
 		<p> Nos articles les plus commandés en promo dès maintenant, jusqu'à fin janvier ! </p>
 		<table>
 		<tr>
-			<td> <img class="cont" id="pcont" src="images/board.png"/> </td>
-			<td> <img class="cont" id="pcont" src="images/trash.png"/> </td>
-			<td> <img class="cont" id="pcont" src="images/roue.png"/> </td>
+			<td> <img class="cont2"  src="images/board.png"/> </td>
+			<td> <img class="cont"  src="images/trash.png"/> </td>
+			<td> <img class="cont"  src="images/roue.png"/> </td>
 		</tr>
 		<tr>
 			<td> Board Gloab Brand -40% </td>
