--- a/skate.html
+++ b/skate.html
@@ -13,11 +13,49 @@
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
-			<li><a href="#2">Portfolio</a></li>
-			<li><a href="#3">News</a></li>
-			<li><a href="#4">Labs</a></li>
+			<li><a href="panier.html">Panier (3)</a></li>
+			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		<h1 id="tapr"> Trouvez la Board de vos rêves </h1>
+		<h1> Trouvez la Board de vos rêves </h1>
+			<section id="tab">
+			<table>
+				<tr>
+					<td> <img class="cont2" id="pcont" src="images/skateplat.png"/> </td>
+					<td> <img class="cont2" id="pcont" src="images/skatecomp.png"/> </td>
+					<td> <img class="cont" id="pcont" src="images/skatetruc.png"/> </td>
+				</tr>
+				<tr>
+					<td> Plateaux </td>
+					<td> Skate complet </td>
+					<td> Trucks </td>
+				</tr>
+				<tr>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+
+				</tr>
+		
+			</table>
+			<table>
+				<tr>
+					<td> <img class="cont"  src="images/skateroue.png"/> </td>
+					<td> <img class="cont2" src="images/skategrip.jpg"/> </td>
+					<td> <img class="cont"  src="images/skateroul.png"/> </td>
+				</tr>
+				<tr>
+					<td> Roues </td>
+					<td> Grip </td>
+					<td> Roulements </td>
+				</tr>
+				<tr>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+				</tr>
+			</table>
+			</section>
+		
 	</body>
 </html>
