--- a/vet.html
+++ b/vet.html
@@ -12,12 +12,49 @@
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
-			<li><a href="#2">Portfolio</a></li>
 			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 		<h1> Les vêtements parfait pour vos sessions </h1>
+			
+			<section id="tab">
+			<table>
+				<tr>
+					<td> <img class="cont2" id="pcont" src="images/vetpant.png"/> </td>
+					<td> <img class="cont" id="pcont" src="images/vetsweat.png"/> </td>
+					<td> <img class="cont" id="pcont" src="images/vetshirt.png"/> </td>
+				</tr>
+				<tr>
+					<td> Pantalons </td>
+					<td> Sweats </td>
+					<td> T-shirts </td>
+				</tr>
+				<tr>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
 
+				</tr>
+		
+			</table>
+			<table>
+				<tr>
+					<td> <img class="cont" id="pcont" src="images/vetchaus.png"/> </td>
+					<td> <img class="cont" id="pcont" src="images/vetveste.png"/> </td>
+					<td> <img class="cont" id="pcont" src="images/vetchem.png"/> </td>
+				</tr>
+				<tr>
+					<td> Chaussures </td>
+					<td> Vestes </td>
+					<td> Chemises </td>
+				</tr>
+				<tr>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <button> Parcourir le catalogue </button> </td>
+				</tr>
+			</table>
+			</section>
 	</body>
 </html>
