--- a/acceuil.html
+++ b/acceuil.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8"/>
@@ -13,7 +13,6 @@
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
-			<li><a href="#2">Portfolio</a></li>
 			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
@@ -22,7 +21,26 @@
 		<h1> Bienvenue sur OnlineSk4teSh0p </h1>
 		
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
-			<!-- Page d'actu sur vêtement, collection, etc </p> -->
+			
+		<section id="acceuil">
+			
+				<a href="vet.html"> <img id="imac1" src="images/vet.jpg"/> </a>
+				<a href="skate.html"> <img id="imac2" src="images/skate.jpg"/> </a>
+			
+			<table>
+			<tr id="news">
+				<td id="logo"> <img id="aclogo" src="images/element.png"/> </td>
+				<td> <p> La nouvelle collection Element enfin disponible, venez la retrouver dès maintenant dans notre boutique au prix les plus intéressants du marché ! </p> </td>
+			</tr>
+			<tr id="news">
+				<td id="logo"> <img id="aclogo" src="images/nikesb.png"/> </td>
+				<td> <p> Arrivage des dernières chaussures de Nike SB spécialement dédiées au Skate ! N'hésitez pas, on est en avance d'une semaine par rapport aux concurrents </p> </td>
+			</tr>
+			<tr id="news">
+				<td id="logo"> <img id="aclogo" src="images/planb.png"/> </td>
+				<td> <p> Les voici, les voilà, les board toutes fraichement sortie de chez Plan B, de la haute qualité, un design attirant, que du bon chez eux, foncez ! </p> </td>
+			</tr>
+		</section>
 			
 	</body>
 </html>
