Fin page acceuil

--- a/acceuil.html
+++ b/acceuil.html
@@ -23,10 +23,11 @@
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
 			
 		<section id="acceuil">
-			
+	<div id="test1">
 				<a href="vet.html"> <img id="imac1" src="images/vet.jpg"/> </a>
 				<a href="skate.html"> <img id="imac2" src="images/skate.jpg"/> </a>
-			
+	</div>
+	<div id="test2">
 			<table>
 			<tr id="news">
 				<td id="logo"> <img id="aclogo" src="images/element.png"/> </td>
@@ -40,6 +41,7 @@
 				<td id="logo"> <img id="aclogo" src="images/planb.png"/> </td>
 				<td> <p> Les voici, les voilà, les board toutes fraichement sortie de chez Plan B, de la haute qualité, un design attirant, que du bon chez eux, foncez ! </p> </td>
 			</tr>
+	</div>
 		</section>
 			
 	</body>
