--- a/skate.html
+++ b/skate.html
@@ -12,7 +12,7 @@
 	
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
-			<li><a id="prom" href="promo.html">Promo de Noël</a></li>
+			<li><a id="prom" href="promo.html">Promotions</a></li>
 			<li><a href="panier.html">Panier (3)</a></li>
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
