Rajout bouton retour page article + correction div acceuil

--- a/acceuil.html
+++ b/acceuil.html
@@ -23,21 +23,21 @@
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
 			
 		<section id="acceuil">
-	<div id="test1">
+	<div>
 				<a href="vet.html"> <img id="imac1" src="images/vet.jpg"/> </a>
 				<a href="skate.html"> <img id="imac2" src="images/skate.jpg"/> </a>
 	</div>
-	<div id="test2">
+	<div id="news">
 			<table>
-			<tr id="news">
+			<tr id="newsb">
 				<td id="logo"> <img id="aclogo" src="images/element.png"/> </td>
 				<td> <p> La nouvelle collection Element enfin disponible, venez la retrouver dès maintenant dans notre boutique au prix les plus intéressants du marché ! </p> </td>
 			</tr>
-			<tr id="news">
+			<tr id="newsb">
 				<td id="logo"> <img id="aclogo" src="images/nikesb.png"/> </td>
 				<td> <p> Arrivage des dernières chaussures de Nike SB spécialement dédiées au Skate ! N'hésitez pas, on est en avance d'une semaine par rapport aux concurrents </p> </td>
 			</tr>
-			<tr id="news">
+			<tr id="newsb">
 				<td id="logo"> <img id="aclogo" src="images/planb.png"/> </td>
 				<td> <p> Les voici, les voilà, les board toutes fraichement sortie de chez Plan B, de la haute qualité, un design attirant, que du bon chez eux, foncez ! </p> </td>
 			</tr>
