--- a/donperso.html
+++ b/donperso.html
@@ -81,6 +81,7 @@
 					<option value="Homme"> Homme </option>
 					<option value="Femme"> Femme </option>
 					<option value="Secret"> Secret </option>
+					<option value="Autre"> Autre </option>
 				</select>
 				</li>
 			</fieldset>
