--- a/skate.html
+++ b/skate.html
@@ -55,6 +55,7 @@
 					<td> <button> Parcourir le catalogue </button> </td>
 				</tr>
 			</table>
+			<p><a href="acceuil.html"><button> Retour </button></a></p>
 			</section>
 		
 	</body>
