Supression ID inutile, modif class, ajout article

--- a/promo.html
+++ b/promo.html
@@ -52,9 +52,9 @@
 		</table>
 		<table>
 		<tr>
-			<td> <img class="cont" id="pcont" src="images/wax.png"/> </td>
-			<td> <img class="cont" id="pcont" src="images/truck.png"/> </td>
-			<td> <img class="cont" id="pcont" src="images/abec.png"/> </td>
+			<td> <img class="cont" src="images/wax.png"/> </td>
+			<td> <img class="cont" src="images/truck.png"/> </td>
+			<td> <img class="cont" src="images/abec.png"/> </td>
 		</tr>
 		<tr>
 			<td> Wax Spitfire -30% </td>
