--- a/skate.html
+++ b/skate.html
@@ -21,9 +21,9 @@
 			<section id="tab">
 			<table>
 				<tr>
-					<td> <img class="cont2" id="pcont" src="images/skateplat.png"/> </td>
-					<td> <img class="cont2" id="pcont" src="images/skatecomp.png"/> </td>
-					<td> <img class="cont" id="pcont" src="images/skatetruc.png"/> </td>
+					<td> <img class="cont2" src="images/skateplat.png"/> </td>
+					<td> <img class="cont2" src="images/skatecomp.png"/> </td>
+					<td> <img class="cont" src="images/skatetruc.png"/> </td>
 				</tr>
 				<tr>
 					<td> Plateaux </td>
