--- a/vet.html
+++ b/vet.html
@@ -21,9 +21,9 @@
 			<section id="tab">
 			<table>
 				<tr>
-					<td> <img class="cont2" id="pcont" src="images/vetpant.png"/> </td>
-					<td> <img class="cont" id="pcont" src="images/vetsweat.png"/> </td>
-					<td> <img class="cont" id="pcont" src="images/vetshirt.png"/> </td>
+					<td> <img class="cont2" src="images/vetpant.png"/> </td>
+					<td> <img class="cont" src="images/vetsweat.png"/> </td>
+					<td> <img class="cont" src="images/vetshirt.png"/> </td>
 				</tr>
 				<tr>
 					<td> Pantalons </td>
@@ -31,18 +31,18 @@
 					<td> T-shirts </td>
 				</tr>
 				<tr>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <a href="pantalon.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="sweat.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="tshirt.html"><button> Parcourir le catalogue </button></a> </td>
 
 				</tr>
 		
 			</table>
 			<table>
 				<tr>
-					<td> <img class="cont" id="pcont" src="images/vetchaus.png"/> </td>
-					<td> <img class="cont" id="pcont" src="images/vetveste.png"/> </td>
-					<td> <img class="cont" id="pcont" src="images/vetchem.png"/> </td>
+					<td> <img class="cont" src="images/vetchaus.png"/> </td>
+					<td> <img class="cont" src="images/vetveste.png"/> </td>
+					<td> <img class="cont" src="images/vetchem.png"/> </td>
 				</tr>
 				<tr>
 					<td> Chaussures </td>
@@ -50,9 +50,9 @@
 					<td> Chemises </td>
 				</tr>
 				<tr>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <a href="chaussure.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="veste.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="chemise.html"><button> Parcourir le catalogue </button></a> </td>
 				</tr>
 			</table>
 			<p><a href="acceuil.html"><button> Retour </button></a></p>
