Classement des pages - Chemin changés dans le code

--- a/vet.html
+++ b/vet.html
@@ -31,9 +31,9 @@
 					<td> T-shirts </td>
 				</tr>
 				<tr>
-					<td> <a href="pantalon.html"><button> Parcourir le catalogue </button></a> </td>
-					<td> <a href="sweat.html"><button> Parcourir le catalogue </button></a> </td>
-					<td> <a href="tshirt.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="vetement/pantalon.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="vetement/sweat.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="vetement/tshirt.html"><button> Parcourir le catalogue </button></a> </td>
 
 				</tr>
 		
@@ -50,9 +50,9 @@
 					<td> Chemises </td>
 				</tr>
 				<tr>
-					<td> <a href="chaussure.html"><button> Parcourir le catalogue </button></a> </td>
-					<td> <a href="veste.html"><button> Parcourir le catalogue </button></a> </td>
-					<td> <a href="chemise.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="vetement/chaussure.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="vetement/veste.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="vetement/chemise.html"><button> Parcourir le catalogue </button></a> </td>
 				</tr>
 			</table>
 			<p><a href="acceuil.html"><button> Retour </button></a></p>
