--- a/vetement/chaussure.html
+++ b/vetement/chaussure.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href='images/skate.ico' rel='shortcut icon'/>
-		<title>OnlineSk4teSh0p - Sweat </title>
+		<title>OnlineSk4teSh0p - Chaussures </title>
 	</head>
 
 	
@@ -21,19 +21,19 @@
 			<section id="tab">
 			<table>
 				<tr>
-					<td> <img class="conta" src="images/projectedgris.png"/> </td>
-					<td> <img class="conta"  src="images/taylornoir.png"/> </td>
-					<td> <img class="conta"  src="images/bronsonblanc.png"/> </td>
+					<td> <img class="conta" src="../images/topaznoir.png"/> </td>
+					<td> <img class="conta"  src="../images/heatleynoir.png"/> </td>
+					<td> <img class="conta"  src="../images/bannockbeige.png"/> </td>
 				</tr>
 				<tr>
-					<td> Projected Gris </td>
-					<td> Taylor Noir </td>
-					<td> Bronson Blanc </td>
+					<td> Topaz Noir </td>
+					<td> Heatley Noir </td>
+					<td> Bannock Beige </td>
 				</tr>
 				<tr>
-					<td> 45 € </td>
-					<td> 65 € </td>
+					<td> 75 € </td>
 					<td> 70 € </td>
+					<td> 90 € </td>
 				</tr>
 				<tr>
 					<td> <button> Détail de l'article </button> </td>
@@ -43,8 +43,8 @@
 				</tr>
 		
 			</table>
-			<p><a href="vet.html"><button> Retour aux catégories </button></a></p>
-			<p><a href="acceuil.html"><button> Retour à l'acceuil </button></a></p>
+			<p><a href="../vet.html"><button> Retour aux catégories </button></a></p>
+			<p><a href="../acceuil.html"><button> Retour à l'acceuil </button></a></p>
 			</section>
 	</body>
 </html>
