--- a/vetement/tshirt.html
+++ b/vetement/tshirt.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href='images/skate.ico' rel='shortcut icon'/>
-		<title>OnlineSk4teSh0p - Vestes </title>
+		<title>OnlineSk4teSh0p - T-Shirts </title>
 	</head>
 
 	
@@ -21,19 +21,19 @@
 			<section id="tab">
 			<table>
 				<tr>
-					<td> <img class="conta" src="images/hemlockkaki.png"/> </td>
-					<td> <img class="conta"  src="images/alterjonesgris.png"/> </td>
-					<td> <img class="conta"  src="images/dulceyvert.png"/> </td>
+					<td> <img class="conta" src="../images/ripsnakenoir.png"/> </td>
+					<td> <img class="conta"  src="../images/gradientbleu.png"/> </td>
+					<td> <img class="conta"  src="../images/flowgris.png"/> </td>
 				</tr>
 				<tr>
-					<td> Hemlock Kaki </td>
-					<td> Alter Jones Gris </td>
-					<td> Dulcey Vert</td>
+					<td> Rip Snake Noir </td>
+					<td> Gradient Bleu </td>
+					<td> Flow Gris </td>
 				</tr>
 				<tr>
-					<td> 150 € </td>
-					<td> 110 € </td>
-					<td> 135 € </td>
+					<td> 30 € </td>
+					<td> 25 € </td>
+					<td> 30 € </td>
 				</tr>
 				<tr>
 					<td> <button> Détail de l'article </button> </td>
@@ -43,8 +43,8 @@
 				</tr>
 		
 			</table>
-			<p><a href="vet.html"><button> Retour aux catégories </button></a></p>
-			<p><a href="acceuil.html"><button> Retour à l'acceuil </button></a></p>
+			<p><a href="../vet.html"><button> Retour aux catégories </button></a></p>
+			<p><a href="../acceuil.html"><button> Retour à l'acceuil </button></a></p>
 			</section>
 	</body>
 </html>
