Correction erreur + fin page detail article
Reste plus qu'a C/C la page detail pour chaque article et fin du site.

--- a/panier.html
+++ b/panier.html
@@ -57,6 +57,7 @@
 			</tr>
 			</table>
 			<p> <a href="commande.html"><button>Passer votre commande</button></a> </p>
+			<p> <a href="acceuil.html"><button>Retour à l'acceuil</button></a>
 		</section>
 	</body>
 </html>
