--- a/promo.html
+++ b/promo.html
@@ -43,9 +43,9 @@
 			<td id="np"> 31,45 € !</td>
 		</tr>
 		<tr>
-			<td> <button> Ajouter au panier </button> </td>
-			<td> <button> Ajouter au panier </button> </td>
-			<td> <button> Ajouter au panier </button> </td>
+			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
+			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
+			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
 
 		</tr>
 		
@@ -72,9 +72,9 @@
 			<td id="np"> 9,60 € ! </td>
 		</tr>
 		<tr>
-			<td> <button> Ajouter au panier </button> </td>
-			<td> <button> Ajouter au panier </button> </td>
-			<td> <button> Ajouter au panier </button> </td>
+			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
+			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
+			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
 		</tr>
 		</table>
 		
