--- a/vetement/chemise.html
+++ b/vetement/chemise.html
@@ -10,11 +10,11 @@
 	
 	<body>
 		<ul>
-			<li><a href="acceuil.html">Acceuil</a></li>
-			<li><a id="prom" href="promo.html">Promotions</a></li>
-			<li><a href="panier.html">Panier (3)</a></li>
-			<li><a href="compte.html">Mon Compte</a></li>
-			<li><a href="aprop.html">A propos de Nous</a></li>
+			<li><a href="../acceuil.html">Acceuil</a></li>
+			<li><a id="prom" href="../promo.html">Promotions</a></li>
+			<li><a href="../panier.html">Panier (3)</a></li>
+			<li><a href="../compte.html">Mon Compte</a></li>
+			<li><a href="../aprop.html">A propos de Nous</a></li>
 		</ul>
 		<h1>  </h1>
 			
@@ -38,7 +38,7 @@
 				<tr>
 					<td> <button> Détail de l'article </button> </td>
 					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="chemises/legiongris.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
