--- a/vetement/chaussure.html
+++ b/vetement/chaussure.html
@@ -10,11 +10,11 @@
 	
 	<body>
 		<ul>
-			<li><a href="acceuil.html">Acceuil</a></li>
-			<li><a id="prom" href="promo.html">Promotions</a></li>
-			<li><a href="panier.html">Panier (3)</a></li>
-			<li><a href="compte.html">Mon Compte</a></li>
-			<li><a href="aprop.html">A propos de Nous</a></li>
+			<li><a href="../acceuil.html">Acceuil</a></li>
+			<li><a id="prom" href="../promo.html">Promotions</a></li>
+			<li><a href="../panier.html">Panier (3)</a></li>
+			<li><a href="../compte.html">Mon Compte</a></li>
+			<li><a href="../aprop.html">A propos de Nous</a></li>
 		</ul>
 		<h1>  </h1>
 			
