Ajout des détails de tous les articles vêtement

--- a/vetement/chaussure.html
+++ b/vetement/chaussure.html
@@ -36,9 +36,9 @@
 					<td> 90 € </td>
 				</tr>
 				<tr>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="chaussures/topaznoir.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="chaussures/heatleynoir.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="chaussures/bannockbeige.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
