--- a/vetement/chemise.html
+++ b/vetement/chemise.html
@@ -36,8 +36,8 @@
 					<td> 60 € </td>
 				</tr>
 				<tr>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="chemises/loganbleu.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="chemises/standerorange.html"><button> Détail de l'article </button></a> </td>
 					<td> <a href="chemises/legiongris.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
