--- a/vetement/chemises/legiongris.html
+++ b/vetement/chemises/legiongris.html
@@ -42,8 +42,13 @@
 			<tr id="comart">
 				<td> <p> Utilisateur 2503 </p> </td>
 				<td> <p> Une chemise classique, douce, jolie, que du plus pour l'instant ! Attention au lavage quand même !  </p> </td>
-			</tr id="comart">
+			</tr>
 			</div>
+			<table>
+			<tr>
+				<td><button>Ajouter un commentaire</button></td>
+			</tr>
+			</table>
 			</section>
 	</body>
 </html>
