--- a/vetement/sweat.html
+++ b/vetement/sweat.html
@@ -36,9 +36,9 @@
 					<td> 70 € </td>
 				</tr>
 				<tr>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="sweats/projectedgris.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="sweats/taylornoir.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="sweats/bronsonblanc.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
