--- a/vetement/tshirt.html
+++ b/vetement/tshirt.html
@@ -36,9 +36,9 @@
 					<td> 30 € </td>
 				</tr>
 				<tr>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="tshirts/ripsnakenoir.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="tshirts/gradientbleu.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="tshirts/flowgris.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
