--- a/vetement/veste.html
+++ b/vetement/veste.html
@@ -36,9 +36,9 @@
 					<td> 135 € </td>
 				</tr>
 				<tr>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="vestes/hemlockkaki.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="vestes/alterjonesgris.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="vestes/dulceyvert.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
