--- a/vetement/pantalon.html
+++ b/vetement/pantalon.html
@@ -36,9 +36,9 @@
 					<td> 65 € </td>
 				</tr>
 				<tr>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
-					<td> <button> Détail de l'article </button> </td>
+					<td> <a href="pantalons/mesagris.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="pantalons/conroybleu.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="pantalons/fieldbeige.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
