Ajout selection taille/quantite sur article vetement

--- a/vetement/chemises/legiongris.html
+++ b/vetement/chemises/legiongris.html
@@ -23,7 +23,7 @@
 				<tr>
 					<td id="art"> <img class="conta" src="../../images/legiongris.png"/> </td>
 					<td id="art"> <p id="int"> Legion Gris </p>
-					<p id="detail"> Faire aussi bien que possible: vous en avez l'assurance dès que vous voyez un logo Element.Qualité et style street authentique sont toujours de rigueur. Comme sur cette chemise Legion au look clean et classique en chambray, aussi appréciée par la classe ouvrière que la classe supérieure. Comprend une poche pectorale. Fabriqué en coton épais et durable, qui ne s'épuisera ni en skate ni au travail. </p> </td>
+					<p id="detail"> Faire aussi bien que possible: vous en avez l'assurance dès que vous voyez un logo Element.Qualité et style street authentique sont toujours de rigueur. Comme sur cette chemise Legion au look clean et classique en chambray, aussi appréciée par la classe ouvrière que la classe supérieure. Fabriqué en coton épais et durable, qui ne s'épuisera ni en skate ni au travail. </p> </td>
 				</tr>
 				<tr>
 					<td id="art"> 60 € </td>
@@ -31,6 +31,22 @@
 
 		
 			</table>
+			<fieldset>
+			<legend> Taille et Quantité </legend>
+				<ol>
+				<select id="quantitetaille" name="taille">
+					<option value="Homme"> S </option>
+					<option value="Femme"> M </option>
+					<option value="Secret"> L </option>
+					<option value="Autre"> XL </option>
+				</select>
+				<select id="quantitetaille" name="quantite">
+					<option value="1"> 1 </option>
+					<option value="2"> 2 </option>
+					<option value="3"> 3 </option>
+				</select>
+				</ol>
+			</fieldset>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../chemise.html"><button> Retour aux chemises </button></a></p>
 			<div id="imart">
