--- a/vetement/pantalons/conroybleu.html
+++ b/vetement/pantalons/conroybleu.html
@@ -23,7 +23,7 @@
 				<tr>
 					<td id="art"> <img class="conta" id="contapant" src="../../images/conroybleu.png"/> </td>
 					<td id="art"> <p id="int"> Conroy Bleu</p>
-					<p id="detail">Ici chez Element, nous pensons que les pantalons sont à la mode ce que les fondations sont à l'architecture. À la conception du jogging Conroy, nous avons voulu qu'il puisse assurer dans un environnement naturel comme dans une ambiance plus métropolitaine. Le Conroy se pose juste sous la taille, plutôt près du corps au niveau de l'assise et des cuisses, et se rétrécit à la cheville avec finition élastique.</p> </td>
+					<p id="detail">Ici chez Element, les pantalons sont à la mode ce que les fondations sont à l'architecture. À la conception du jogging Conroy, nous avons voulu qu'il puisse assurer dans un environnement naturel comme dans une ambiance plus métropolitaine. Le Conroy se pose juste sous la taille, plutôt près du corps au niveau de l'assise et des cuisses, et se rétrécit à la cheville avec finition élastique.</p> </td>
 				</tr>
 				<tr>
 					<td id="art"> 75 € </td>	
@@ -31,6 +31,22 @@
 
 		
 			</table>
+			<fieldset>
+			<legend> Taille et Quantité </legend>
+				<ol>
+				<select id="quantitetaille" name="taille">
+					<option value="Homme"> S </option>
+					<option value="Femme"> M </option>
+					<option value="Secret"> L </option>
+					<option value="Autre"> XL </option>
+				</select>
+				<select id="quantitetaille" name="quantite">
+					<option value="1"> 1 </option>
+					<option value="2"> 2 </option>
+					<option value="3"> 3 </option>
+				</select>
+				</ol>
+			</fieldset>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../pantalon.html"><button> Retour aux Pantalons </button></a></p>
 			<div id="imart">
