--- a/vetement/sweats/projectedgris.html
+++ b/vetement/sweats/projectedgris.html
@@ -31,6 +31,22 @@
 
 		
 			</table>
+			<fieldset>
+			<legend> Taille et Quantité </legend>
+				<ol>
+				<select id="quantitetaille" name="taille">
+					<option value="Homme"> S </option>
+					<option value="Femme"> M </option>
+					<option value="Secret"> L </option>
+					<option value="Autre"> XL </option>
+				</select>
+				<select id="quantitetaille" name="quantite">
+					<option value="1"> 1 </option>
+					<option value="2"> 2 </option>
+					<option value="3"> 3 </option>
+				</select>
+				</ol>
+			</fieldset>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../sweat.html"><button> Retour aux Sweats </button></a></p>
 			<div id="imart">
