--- a/vetement/chaussures/heatleynoir.html
+++ b/vetement/chaussures/heatleynoir.html
@@ -35,10 +35,10 @@
 			<legend> Taille et Quantité </legend>
 				<ol>
 				<select id="quantitetaille" name="taille">
-					<option value="Homme"> S </option>
-					<option value="Femme"> M </option>
-					<option value="Secret"> L </option>
-					<option value="Autre"> XL </option>
+					<option value="38-39"> 38-39 </option>
+					<option value="40-41"> 40-41 </option>
+					<option value="42-43"> 42-43 </option>
+					<option value="44+"> 44+ </option>
 				</select>
 				<select id="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
