Début détails article de skate

--- a/skate.html
+++ b/skate.html
@@ -31,9 +31,9 @@
 					<td> Trucks </td>
 				</tr>
 				<tr>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <a href="skate/plateau.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="skate/skatec.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="skate/truck.html"><button> Parcourir le catalogue </button></a> </td>
 
 				</tr>
 		
@@ -50,9 +50,9 @@
 					<td> Roulements </td>
 				</tr>
 				<tr>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
-					<td> <button> Parcourir le catalogue </button> </td>
+					<td> <a href="skate/roue.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="skate/grip.html"><button> Parcourir le catalogue </button></a> </td>
+					<td> <a href="skate/roulement.html"><button> Parcourir le catalogue </button></a> </td>
 				</tr>
 			</table>
 			<p><a href="acceuil.html"><button> Retour </button></a></p>
