fin article roues et début resp design

--- a/skate/roue.html
+++ b/skate/roue.html
@@ -36,9 +36,9 @@
 					<td> 32 € </td>
 				</tr>
 				<tr>
-					<td> <a href="chaussures/section.html"><button> Détail de l'article </button></a> </td>
-					<td> <a href="chaussures/filmer.html"><button> Détail de l'article </button></a> </td>
-					<td> <a href="chaussures/landlines.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="roues/section.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="roues/filmer.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="roues/landlines.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
