--- a/acceuil.html
+++ b/acceuil.html
@@ -9,14 +9,15 @@
 
 	
 	<body>
-	
+		<div>
 		<ul>
-			<li><a href="acceuil.html">Acceuil</a></li>
-			<li><a id="prom" href="promo.html">Promotions</a></li>
-			<li><a href="panier.html">Panier (3)</a></li>
-			<li><a href="compte.html">Mon Compte</a></li>
-			<li><a href="aprop.html">A propos de Nous</a></li>
+			<li><a href="acceuil.html" class="menu" >Acceuil</a></li>
+			<li><a id="prom" href="promo.html" class="menu">Promotions</a></li>
+			<li><a href="panier.html" class="menu">Panier (3)</a></li>
+			<li><a href="compte.html" class="menu">Mon Compte</a></li>
+			<li><a href="aprop.html" class="menu">A propos de Nous</a></li>
 		</ul>
+		</div>
 
 		<h1> Bienvenue sur OnlineSk4teSh0p </h1>
 		
