Fin ajout de tous les articles

--- a/skate/grip.html
+++ b/skate/grip.html
@@ -36,9 +36,9 @@
 					<td> 18 € </td>
 				</tr>
 				<tr>
-					<td> <a href="chaussures/grizzly.html"><button> Détail de l'article </button></a> </td>
-					<td> <a href="chaussures/creature.html"><button> Détail de l'article </button></a> </td>
-					<td> <a href="chaussures/mobgrip.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="grips/grizzly.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="grips/creature.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="grips/mobgrip.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
