--- a/skate/roulement.html
+++ b/skate/roulement.html
@@ -36,9 +36,9 @@
 					<td> 27 € </td>
 				</tr>
 				<tr>
-					<td> <a href="chaussures/diamond.html"><button> Détail de l'article </button></a> </td>
-					<td> <a href="chaussures/lucky.html"><button> Détail de l'article </button></a> </td>
-					<td> <a href="chaussures/enjoi.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="roulements/diamond.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="roulements/lucky.html"><button> Détail de l'article </button></a> </td>
+					<td> <a href="roulements/enjoi.html"><button> Détail de l'article </button></a> </td>
 
 				</tr>
 		
